Fix grid rendering mis-aligning buttons
What it says on the tin

--- a/web/www/style.css
+++ b/web/www/style.css
@@ -101,6 +101,7 @@ button {
     margin-left: 3vw;
     margin-right: 3vw;
     margin-bottom: 1.5vh
+    width: 100vw;
 }
 
 #grid_invis{
